--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
         <body>
             Xalax 123
         </body>
+        <p>
+            Este es el primer parrafo del index
+        </p>
     </head>
 </html> 
